--- a/src/app/shared/legal-notice/legal-notice.html
+++ b/src/app/shared/legal-notice/legal-notice.html
@@ -7,18 +7,24 @@
                 <div class="text-section">
                     <h2>Imprint</h2>
                     <p class="imprint-info">
-                        [Student Names List]<br>
-                        [Address of the JOIN operator - e.g. one of the students]<br>
-                        [Postcode and city]<br>
+                        Daniel Luzius<br>
+                        Hauptstraße 125<br>
+                        63500 Seligenstadt<br>
                         Exploring the Board<br>
-                        Email: [Email]
+                        Email: Danielluzius@mail.de
                     </p>
+                </div>
+
+                <div class="text-section">
+                    <h2>Exploring the Board</h2>
+                    <p>Email: Danielluzius@mail.de</p>
                 </div>
 
                 <div class="text-section">
                     <h2>Acceptance of terms</h2>
                     <p>
-                        By accessing and using Portfolio (Product), you acknowledge and agree to the following terms and
+                        By accessing and using <span class="highlight">Portfolio</span> (Product), you acknowledge and
+                        agree to the following terms and
                         conditions, and any policies, guidelines, or amendments thereto that may be presented to you
                         from time to time. We, the listed students, may update or change the terms and conditions from
                         time to time without notice.
@@ -28,13 +34,16 @@
                 <div class="text-section">
                     <h2>Scope and ownership of the product</h2>
                     <p>
-                        Portfolio has been developed as part of a student group project in a web development bootcamp at
-                        the Developer Akademie GmbH. It has an educational purpose and is not intended for extensive
+                        <span class="highlight">Portfolio</span> has been developed as part of a student group project
+                        in a web development bootcamp at
+                        the <span class="highlight">Developer Akademie GmbH</span>. It has an educational purpose and is
+                        not intended for extensive
                         personal & business usage. As such, we cannot guarantee consistent availability, reliability,
                         accuracy, or any other aspect of quality regarding this Product.
                     </p>
                     <p>
-                        The design of Portfolio is owned by the Developer Akademie GmbH. Unauthorized use, reproduction,
+                        The design of <span class="highlight">Portfolio</span> is owned by the <span
+                            class="highlight">Developer Akademie GmbH</span>. Unauthorized use, reproduction,
                         modification, distribution, or replication of the design is strictly prohibited.
                     </p>
                 </div>
@@ -42,8 +51,10 @@
                 <div class="text-section">
                     <h2>Proprietary rights</h2>
                     <p>
-                        Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all
-                        proprietary rights in Portfolio, including any associated copyrighted material, trademarks, and
+                        Aside from the design owned by <span class="highlight">Developer Akademie GmbH</span>, we, the
+                        listed students, retain all
+                        proprietary rights in <span class="highlight">Portfolio</span>, including any associated
+                        copyrighted material, trademarks, and
                         other proprietary information.
                     </p>
                 </div>
@@ -51,36 +62,45 @@
                 <div class="text-section">
                     <h2>Use of the product</h2>
                     <p>
-                        Portfolio is intended to be used for lawful purposes only, in accordance with all applicable
-                        laws and regulations. Any use of Portfolio for illegal activities, or to harass, harm, threaten,
+                        <span class="highlight">Portfolio</span> is intended to be used for lawful purposes only, in
+                        accordance with all applicable
+                        laws and regulations. Any use of <span class="highlight">Portfolio</span> for illegal
+                        activities, or to harass, harm, threaten,
                         or intimidate another person, is strictly prohibited. You are solely responsible for your
-                        interactions with other users of Portfolio.
+                        interactions with other users of <span class="highlight">Portfolio</span>.
                     </p>
                 </div>
 
                 <div class="text-section">
                     <h2>Disclaimer of warranties and limitation of liability</h2>
                     <p>
-                        Portfolio is provided "as is" without warranty of any kind, whether express or implied,
+                        <span class="highlight">Portfolio</span> is provided "as is" without warranty of any kind,
+                        whether express or implied,
                         including but not limited to the implied warranties of merchantability, fitness for a particular
-                        purpose, and non-infringement. In no event will we, the listed students, or the Developer
-                        Akademie, be liable for any direct, indirect, incidental, special, consequential or exemplary
+                        purpose, and non-infringement. In no event will we, the listed students, or the <span
+                            class="highlight">Developer
+                            Akademie</span>, be liable for any direct, indirect, incidental, special, consequential or
+                        exemplary
                         damages, including but not limited to, damages for loss of profits, goodwill, use, data, or
                         other intangible losses, even if we have been advised of the possibility of such damages,
-                        arising out of or in connection with the use or performance of Portfolio.
+                        arising out of or in connection with the use or performance of <span
+                            class="highlight">Portfolio</span>.
                     </p>
                 </div>
 
                 <div class="text-section">
                     <h2>Indemnity</h2>
                     <p>
-                        You agree to indemnify, defend and hold harmless us, the listed students, the Developer
-                        Akademie, and our affiliates, partners, officers, directors, agents, and employees, from and
+                        You agree to indemnify, defend and hold harmless us, the listed students, the <span
+                            class="highlight">Developer
+                            Akademie</span>, and our affiliates, partners, officers, directors, agents, and employees,
+                        from and
                         against any claim, demand, loss, damage, cost, or liability (including reasonable legal fees)
-                        arising out of or relating to your use of Portfolio and/or your breach of this Legal Notice.
+                        arising out of or relating to your use of <span class="highlight">Portfolio</span> and/or your
+                        breach of this Legal Notice.
                     </p>
                     <p>
-                        For any questions or notices, please contact us at [Contact Email].
+                        For any questions or notices, please contact us at Danielluzius@mail.de.
                     </p>
                     <p class="date-info">
                         Date: October 03, 2025
