--- a/src/app/main/projects/projects.html
+++ b/src/app/main/projects/projects.html
@@ -59,7 +59,6 @@
                             formatProjectNumber(activeDialogIndex) : '' }}</span>
                         <div class="projects__dialog-title">
                             <h3 class="projects__dialog-name">{{ modalProject.title }}</h3>
-                            <p class="projects__dialog-subtitle">{{ modalProject.subtitle }}</p>
                         </div>
                     </div>
 
@@ -79,12 +78,14 @@
                         <a *ngIf="modalProject.githubUrl" class="projects__dialog-button"
                             [href]="modalProject.githubUrl" target="_blank" rel="noopener noreferrer">
                             <span>GitHub</span>
-                            <img src="assets/icon/project-icon/arrow_outward.png" alt="" aria-hidden="true" />
+                            <img src="assets/icon/project-icon/arrow_outward_green_default.png" alt=""
+                                aria-hidden="true" />
                         </a>
                         <a *ngIf="modalProject.liveUrl" class="projects__dialog-button" [href]="modalProject.liveUrl"
                             target="_blank" rel="noopener noreferrer">
                             <span>Live Test</span>
-                            <img src="assets/icon/project-icon/arrow_outward.png" alt="" aria-hidden="true" />
+                            <img src="assets/icon/project-icon/arrow_outward_green_default.png" alt=""
+                                aria-hidden="true" />
                         </a>
                     </div>
                 </div>
