--- a/src/app/main/hero/right-lateral/right-lateral.html
+++ b/src/app/main/hero/right-lateral/right-lateral.html
@@ -2,12 +2,14 @@
     <a class="email" href="mailto:danielluzius@mail.de">DANIELLUZIUS@MAIL.DE</a>
 
     <div class="icons">
-        <a class="icon" aria-label="GitHub">
+        <a class="icon" href="https://github.com/Danielluzius" target="_blank" rel="noopener noreferrer"
+            aria-label="GitHub">
             <img class="icon__image icon__image--default" src="assets/icon/github_icon.png" alt="GitHub Icon">
             <img class="icon__image icon__image--hover" src="assets/icon/github_hover.png" alt="" aria-hidden="true">
             <img class="icon__circle" src="assets/icon/radio_hover.png" alt="" aria-hidden="true">
         </a>
-        <a class="icon" aria-label="LinkedIn">
+        <a class="icon" href="https://www.linkedin.com/in/daniel-luzius-03684636b/" target="_blank"
+            rel="noopener noreferrer" aria-label="LinkedIn">
             <img class="icon__image icon__image--default" src="assets/icon/linkedin_icon.png" alt="LinkedIn Icon">
             <img class="icon__image icon__image--hover" src="assets/icon/linkedin_hover.png" alt="" aria-hidden="true">
             <img class="icon__circle" src="assets/icon/radio_hover.png" alt="" aria-hidden="true">
