--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -13,15 +13,16 @@
         </div>
 
         <nav class="footer-nav">
-            <a href="#hero" class="nav-link">
+            <a href="https://github.com/Danielluzius" target="_blank" rel="noopener noreferrer" class="nav-link">
                 <span class="radio-button"></span>
                 <span class="link-text">Github</span>
             </a>
-            <a href="#about-me" class="nav-link">
+            <a href="https://www.linkedin.com/in/daniel-luzius-03684636b/" target="_blank" rel="noopener noreferrer"
+                class="nav-link">
                 <span class="radio-button"></span>
                 <span class="link-text">LinkedIn</span>
             </a>
-            <a href="#skills" class="nav-link">
+            <a href="mailto:danielluzius@mail.de" class="nav-link">
                 <span class="radio-button"></span>
                 <span class="link-text">Email</span>
             </a>
