feat: added burger menu with style and all links

--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -4,6 +4,12 @@
             <app-language-switch></app-language-switch>
             <app-menu></app-menu>
         </div>
-        <app-logo></app-logo>
+        <app-logo class="header__logo"></app-logo>
+        <button class="header__burger-menu" (click)="toggleMenu()" [class.header__burger-menu--active]="isMenuOpen"
+            aria-label="Menu">
+            <img [src]="isMenuOpen ? '/assets/icon/burger_menu_press.png' : '/assets/icon/burger_menu_default.png'"
+                alt="Menu">
+        </button>
     </div>
+    <app-burger-menu [isOpen]="isMenuOpen" (close)="closeMenu()"></app-burger-menu>
 </header>
