style: responsive designe in hero for mail adress

--- a/src/app/main/hero/right-lateral/right-lateral.html
+++ b/src/app/main/hero/right-lateral/right-lateral.html
@@ -2,6 +2,11 @@
     <a class="email" href="mailto:danielluzius@mail.de">DANIELLUZIUS@MAIL.DE</a>
 
     <div class="icons">
+        <a class="icon icon--email" href="mailto:danielluzius@mail.de" aria-label="Email">
+            <img class="icon__image icon__image--default" src="assets/icon/mail_icon.png" alt="Email Icon">
+            <img class="icon__image icon__image--hover" src="assets/icon/mail_hover.png" alt="" aria-hidden="true">
+            <img class="icon__circle" src="assets/icon/radio_hover.png" alt="" aria-hidden="true">
+        </a>
         <a class="icon" href="https://github.com/Danielluzius" target="_blank" rel="noopener noreferrer"
             aria-label="GitHub">
             <img class="icon__image icon__image--default" src="assets/icon/github_icon.png" alt="GitHub Icon">
